# OpenCV-chinese-support

./: CMakeLists.txt  Cv310Text.cpp  Cv310Text.h  main.cpp
